Fix table padding, fix header icon padding, change hero image, fix horizontal scrolling on mobile,

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -52,17 +52,20 @@ h3 {
 }
 
 .mobile-table {
-  margin: 10px;
+  margin: 0px;
+  padding: 0px;
 }
 
 table {
   width: 75%;
   margin: 10px;
+  padding: 10px;
 }
 
 th {
   text-align: left;
   text-overflow: ellipsis;
+  padding-right: 15px;
 }
 
 td {
