--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,4 +1,5 @@
 @import "../global_styles.scss";
+
 button {
   background-color: $main-color;
   border: 1px solid white;
@@ -13,7 +14,6 @@ a {
   text-align: center;
   margin-top: 3rem;
   font-size: 1rem;
-  font-weight: bold;
   padding: 1rem;
 }
 
