--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,9 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 html, body {
-  height: 100%;
+  height: auto;
+  width: auto;
+  overflow-x: hidden;
 }
 
 body {
